--- a/sample_downloading_elsewhere.ipynb
+++ b/sample_downloading_elsewhere.ipynb
@@ -63,8 +63,8 @@
         "\n",
         "sub_r = 'StopSelfHarm'\n",
         "\n",
-        "reddit = praw.Reddit(client_id='K6-q2KLeJfLZ2C8A-moPhQ', \n",
-        "                     client_secret='0hWIR57hPUayz9KOA_cJalLbhSGcWg', \n",
+        "reddit = praw.Reddit(client_id='---------------', \n",
+        "                     client_secret='----------------', \n",
         "                     user_agent='hashem',\n",
         "                     check_for_async=False)\n",
         "\n",
